# Geoscan_MOPS

./: .gitignore  README.md  docker-compose.yml  start.sh
ai_service/: Dockerfile  main.py  pyproject.toml
ai_service/prompts/: flight_vla.md  mock_flight.md  planning_vla.md  system_prompt.md
autostart_codes_pioneermini/: cam_serv_server.py  cameras_stream.py
backend/: Dockerfile  add_ai_models.py  add_columns.py  add_meta_data.py  inspect_db.py  metashape.py  pyproject.toml  recreate_table.py  recreate_table_v2.py  test_history.py  update_db.py
backend/src/: main.py
backend/src/api/: auth.py  projects.py
backend/src/core/: config.py  security.py
backend/src/cracksam/: predict_single.py
backend/src/db/: database.py  models.py
backend/src/schemas/: project.py  user.py
backend/src/services/: ai.py  fly.py  grabber.py  image.py  metashape.py
backend/tests/: test_auth.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/backgroundWaves/: BackgroundWaves.css  BackgroundWaves.jsx
frontend/src/components/header/: header.css  header.jsx
frontend/src/components/imageViewer/: AdvancedModelViewer.jsx  imageViewer.css  imageViewer.jsx
frontend/src/components/leftPanel/: leftPanel.jsx
frontend/src/components/sidebar/: Sidebar.css  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/AuthPage/: AuthPage.css  AuthPage.jsx
frontend/src/pages/MainPage/: MainPage.css  MainPage.jsx
frontend/src/pages/MissionPage/: MissionPage.css  MissionPage.jsx  RouteVisualizer.jsx
frontend/src/pages/ResultPage/: ResultPage.css  ResultPage.jsx
frontend/src/pages/StartPage/: RouteVisualizer.jsx  StartPage.css  StartPage.jsx
pioneer_mcp/: Dockerfile  README.md  dataset_collect.py  main.py  pyproject.toml  test_cam.py  test_lps.py  test_mini.py  test_servocam.py  test_thermal.py  test_tof.py
pioneer_mcp/src/: __main__.py  drone_runtime.py  server.py
telemetry_service/: Dockerfile  main.py  pyproject.toml
