[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "dill>=0.4.1",
    "fastapi>=0.104.0",
    "httpx>=0.28.1",
    "metashape",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.6",
    "sahi>=0.12.1",
    "sqlalchemy>=2.0.51",
    "ultralytics>=8.3.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.uv.sources]
metashape = { path = "metashape-2.3.1-cp39.cp310.cp311.cp312.cp313-abi3-macosx_11_0_universal2.macosx_10_13_x86_64.whl" }
