[project]
name = "pioneer_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "mcp>=1.28.1",
    "numpy>=1.26.4",
    "opencv-python>=4.10.0.84",
    "pioneer-sdk2>=0.15.4",
    "starlette>=1.3.1",
    "uvicorn>=0.51.0",
]
