[project]
name = "telemetry-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.2",
    "pioneer-sdk2>=0.15.4",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
    "websockets>=16.1.1",
]
